create logger  component

--- a/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
+++ b/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
@@ -42,8 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoggingTest\ConsoleLoggerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationTest\JsonSerializationTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpTools\SharpTools.csproj">
+      <Project>{3e81e702-05c9-4037-896a-1e4dd030abcb}</Project>
+      <Name>SharpTools</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
