--- a/SharpTools/SharpTools/SharpTools.csproj
+++ b/SharpTools/SharpTools/SharpTools.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache\ICache.cs" />
     <Compile Include="Convert\ConvertManager.cs" />
     <Compile Include="Convert\TypeConverter.cs" />
     <Compile Include="Libs\Newtonsoft.Json\Bson\BsonBinaryType.cs" />
@@ -218,14 +219,26 @@
     <Compile Include="Libs\Newtonsoft.Json\Utilities\TypeExtensions.cs" />
     <Compile Include="Libs\Newtonsoft.Json\Utilities\ValidationUtils.cs" />
     <Compile Include="Libs\Newtonsoft.Json\WriteState.cs" />
-    <Compile Include="Logger\FileLogger.cs" />
-    <Compile Include="Logger\ILog.cs" />
-    <Compile Include="Logger\LoggerManager.cs" />
+    <Compile Include="Logging\AbstractLoggerFactory.cs" />
+    <Compile Include="Logging\ConsoleLog.cs" />
+    <Compile Include="Logging\ConsoleLogger.cs" />
+    <Compile Include="Logging\ConsoleLoggerFactory.cs" />
+    <Compile Include="Logging\LoggerCache.cs" />
+    <Compile Include="Logging\FileLogger.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\ILoggerFactory.cs" />
+    <Compile Include="Logging\LoggerException.cs" />
+    <Compile Include="Logging\LevelFilteredLogger.cs" />
+    <Compile Include="Logging\LoggerLevel.cs" />
+    <Compile Include="Logging\LoggerManager.cs" />
+    <Compile Include="Logging\NullLogger.cs" />
+    <Compile Include="Logging\NullLoggerFactory.cs" />
+    <Compile Include="Logging\SimpleLogger.cs" />
+    <Compile Include="Logging\SimpleLoggerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SerializationManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Cache\" />
     <Folder Include="Collection\" />
     <Folder Include="Compression\" />
     <Folder Include="Data\" />
