--- a/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
+++ b/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="LoggingTest\ConsoleLoggerTest.cs" />
     <Compile Include="LoggingTest\SimpleLoggerTest.cs" />
+    <Compile Include="MailTest\SmtpMailTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationTest\JsonSerializationTest.cs" />
   </ItemGroup>
