--- a/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
+++ b/SharpTools/SharpTools.Tests/SharpTools.Tests.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LoggingTest\ConsoleLoggerTest.cs" />
-    <Compile Include="LoggingTest\SimpleLoggerTest.cs" />
+    <Compile Include="LoggingTest\FileLoggerTest.cs" />
     <Compile Include="MailTest\SmtpMailTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationTest\JsonSerializationTest.cs" />
