--- a/SharpTools/SharpTools/SharpTools.csproj
+++ b/SharpTools/SharpTools/SharpTools.csproj
@@ -221,20 +221,14 @@
     <Compile Include="Libs\Newtonsoft.Json\Utilities\TypeExtensions.cs" />
     <Compile Include="Libs\Newtonsoft.Json\Utilities\ValidationUtils.cs" />
     <Compile Include="Libs\Newtonsoft.Json\WriteState.cs" />
-    <Compile Include="Logging\AbstractLoggerFactory.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
-    <Compile Include="Logging\ConsoleLoggerFactory.cs" />
     <Compile Include="Logging\MailLogger.cs" />
-    <Compile Include="Logging\MailLoggerFactory.cs" />
-    <Compile Include="Logging\ILoggerFactory.cs" />
     <Compile Include="Cache\AsyncCache.cs" />
     <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\LoggerException.cs" />
-    <Compile Include="Logging\LevelFilteredLogger.cs" />
+    <Compile Include="Logging\BaseLogger.cs" />
     <Compile Include="Logging\LoggerLevel.cs" />
-    <Compile Include="Logging\LoggerManager.cs" />
-    <Compile Include="Logging\SimpleLogger.cs" />
-    <Compile Include="Logging\SimpleLoggerFactory.cs" />
+    <Compile Include="Logging\LoggerFactory.cs" />
+    <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Mail\SmtpMail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SerializationManager.cs" />
